{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 25,
  "lineage": "f3cadf9a-31ec-3b18-8838-50fa5e8c4897",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DQMLZJDQLD-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772ef3cb55cddbe6",
            "domain": "vpc",
            "id": "eipalloc-0772ef3cb55cddbe6",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-52-47-58-65.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.58.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DQMLZJDQLD-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-00c1b6f3e6af661b3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c1b6f3e6af661b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4da2c5203e37905",
            "private_dns": "ip-10-0-1-126.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_ip": "35.181.51.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0141ab8f95404e590",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06e6e530597d46749"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05256a3bb27616cbf",
            "tags": {
              "Name": "DQMLZJDQLD-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e6e530597d46749"
            ]
          },
          "dependencies": [
            "aws_security_group.DQMLZJDQLD-SG-ADMIN",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DQMLZJDQLD-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0ac0ac90a14fc7823",
            "id": "igw-0ac0ac90a14fc7823",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DQMLZJDQLD-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772ef3cb55cddbe6",
            "association_id": "eipassoc-0c88963ca51210026",
            "connectivity_type": "public",
            "id": "nat-0641fb0319b87f6de",
            "network_interface_id": "eni-084058fab7a969e94",
            "private_ip": "10.0.1.163",
            "public_ip": "52.47.58.65",
            "subnet_id": "subnet-05256a3bb27616cbf",
            "tags": {
              "Name": "DQMLZJDQLD-NAT-GTW"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.DQMLZJDQLD-EIP",
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DQMLZJDQLD-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac0ac90a14fc7823",
            "id": "r-rtb-0068c5ad0a04e74571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0068c5ad0a04e7457",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_internet_gateway_attachment.DQMLZJDQLD-IGW-ATTACHMENT",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DQMLZJDQLD-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0b1a3f98d15d91b6a",
            "id": "rtb-0b1a3f98d15d91b6a",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0641fb0319b87f6de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DQMLZJDQLD-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.DQMLZJDQLD-EIP",
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_nat_gateway.DQMLZJDQLD-NAT-GTW",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DQMLZJDQLD-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0faeaeb42fcc38379",
            "id": "rtb-0faeaeb42fcc38379",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac0ac90a14fc7823",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DQMLZJDQLD-ROUTE1"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DQMLZJDQLD-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0d749e5d72dfa3",
            "route_table_id": "rtb-0b1a3f98d15d91b6a",
            "subnet_id": "subnet-003753a351da504cb"
          },
          "dependencies": [
            "aws_eip.DQMLZJDQLD-EIP",
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_nat_gateway.DQMLZJDQLD-NAT-GTW",
            "aws_route_table.DQMLZJDQLD-ROUTE-PRIV",
            "aws_subnet.DQMLZJDQLD-PRIV-SUBNET1",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DQMLZJDQLD-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07612437b2c83afbd",
            "route_table_id": "rtb-0b1a3f98d15d91b6a",
            "subnet_id": "subnet-03da88674e2adc3a4"
          },
          "dependencies": [
            "aws_eip.DQMLZJDQLD-EIP",
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_nat_gateway.DQMLZJDQLD-NAT-GTW",
            "aws_route_table.DQMLZJDQLD-ROUTE-PRIV",
            "aws_subnet.DQMLZJDQLD-PRIV-SUBNET2",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DQMLZJDQLD-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c96c06a5fc706771",
            "route_table_id": "rtb-0b1a3f98d15d91b6a",
            "subnet_id": "subnet-0eb86cf8d232fa284"
          },
          "dependencies": [
            "aws_eip.DQMLZJDQLD-EIP",
            "aws_internet_gateway.DQMLZJDQLD-IGW",
            "aws_nat_gateway.DQMLZJDQLD-NAT-GTW",
            "aws_route_table.DQMLZJDQLD-ROUTE-PRIV",
            "aws_subnet.DQMLZJDQLD-PRIV-SUBNET3",
            "aws_subnet.DQMLZJDQLD-PUB-SUBNET",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DQMLZJDQLD-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-06e6e530597d46749",
            "description": "DQMLZJDQLD-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e6e530597d46749",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DQMLZJDQLD-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DQMLZJDQLD-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DQMLZJDQLD-SG-ADMIN"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DQMLZJDQLD-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0a30bba9f69654b53",
            "description": "DQMLZJDQLD-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a30bba9f69654b53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e6e530597d46749"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "DQMLZJDQLD-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023c7007b44d4f3ea"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DQMLZJDQLD-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DQMLZJDQLD-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DQMLZJDQLD-SG-ADMIN",
            "aws_security_group.DQMLZJDQLD-SG-REVERSE",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DQMLZJDQLD-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-023c7007b44d4f3ea",
            "description": "DQMLZJDQLD-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c7007b44d4f3ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DQMLZJDQLD-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "DQMLZJDQLD-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e6e530597d46749"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DQMLZJDQLD-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DQMLZJDQLD-SG-REVERSE"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DQMLZJDQLD-SG-ADMIN",
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DQMLZJDQLD-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-003753a351da504cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003753a351da504cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "dependencies": [
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DQMLZJDQLD-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-03da88674e2adc3a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da88674e2adc3a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "dependencies": [
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DQMLZJDQLD-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0eb86cf8d232fa284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb86cf8d232fa284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "dependencies": [
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DQMLZJDQLD-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-05256a3bb27616cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05256a3bb27616cbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DQMLZJDQLD-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-PUB-SUBNET"
            },
            "vpc_id": "vpc-0b2ac836db71e2965"
          },
          "dependencies": [
            "aws_vpc.DQMLZJDQLD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DQMLZJDQLD-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0b2ac836db71e2965",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6fc08931165aad4",
            "default_route_table_id": "rtb-0068c5ad0a04e7457",
            "default_security_group_id": "sg-0b0527c9658d2e0da",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2ac836db71e2965",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0068c5ad0a04e7457",
            "owner_id": "962615889483",
            "tags": {
              "Name": "DQMLZJDQLD-VPC"
            },
            "tags_all": {
              "Name": "DQMLZJDQLD-VPC"
            }
          }
        }
      ]
    }
  ]
}